@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/atk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.180 2009/09/25 16:58:41 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.181 2009/09/27 15:21:53 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> atk-1.26.0.ebuild:
+  ppc stable #285586
 
   25 Sep 2009; Brent Baude <ranger@gentoo.org> atk-1.26.0.ebuild:
   Marking atk-1.26.0 ppc64 stable for bug 285586
